<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/beach_img"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/beach" />

    <Switch
        android:id="@+id/beach_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/beach_sw"
        android:textOff="@string/beach_sw_off"
        android:textOn="@string/beach_sw_on" />

    <LinearLayout
        android:id="@+id/beach_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flag_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flag" />

            <Spinner
                android:id="@+id/flag_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_ed"
            android:hint="@string/search_kid" />

        <ListView
            android:id="@+id/kids_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>